# Orizon-Agents-FE-Stellar

./: .env.example  .gitignore  GREENBELT.md  ORANGEBELT.md  PRD.md  README.md  WHITEBELT.md  YELLOWBELT.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/app/: layout.tsx  page.tsx
backend/: .env.example  .gitignore  README.md  USING_CONTRACTS.md  render.yaml  requirements.txt  run.sh
backend/app/: config.py  main.py  schemas.py  (+3 more)
contract/: Cargo.toml  Makefile  README.md
contract/contract/agent-registry/: Cargo.toml
contract/contract/agent-registry/src/: lib.rs  test.rs
contract/contract/attestation-registry/src/: lib.rs  test.rs
contract/contract/attestation-registry/test_snapshots/test/: write_once.1.json
contract/contract/payment-escrow/: Cargo.toml
contract/contract/payment-escrow/src/: test.rs
contract/contract/payment-escrow/test_snapshots/test/: authorize_charge_receipt.1.json  cannot_overdraw_authorization.1.json
contract/contract/reputation-ledger/src/: lib.rs  test.rs
contract/contract/reputation-ledger/test_snapshots/test/: rejects_non_scorer.1.json  replay_rejected.1.json
contract/contract/shared/: Cargo.toml
contract/contract/shared/src/: lib.rs
contract/scripts/: deploy_testnet.sh  fund_accounts.sh
contracts/: .gitignore  rust-toolchain.toml
lib/: api.ts  mock-data.ts  pdax-types.ts  pdax.ts  stellar-events.ts  types.ts  wallet-errors.test.ts  wallet-errors.ts  wallet.tsx
(+123 files in other folders)
