[workspace]
resolver = "2"
members = [
    "contract/shared",
    "contract/agent-registry",
    "contract/reputation-ledger",
    "contract/payment-escrow",
    "contract/attestation-registry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
authors = ["Orizon Agents"]
license = "MIT"

[workspace.dependencies]
soroban-sdk = "25.3.1"
orizon-shared = { path = "contract/shared" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
